<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">格物文玩</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="publish">发布</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="commit">提交</string>
    <string name="comment">评论</string>
    <string name="detail">详情</string>
    <string name="like">喜欢</string>
    <string name="un_like">已喜欢</string>
    <string name="follow">+关注</string>
    <string name="un_follow">已关注</string>
    <string name="collect">收藏</string>
    <string name="un_collect">已收藏</string>
    <string name="finish">完成</string>
    <string name="save">保存</string>
    <string name="refresh">刷新</string>
    <string name="tips_no_data">暂无更多\n轻触界面重新获取</string>
    <string name="login_timeout_tips">登录过期！请重新登录</string>
    <string name="login_no_login_tips">您未登录，是否去登录？</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_fragment_first">首页</string>
    <string name="title_fragment_second">格物商城</string>
    <string name="title_fragment_third">藏品专区</string>
    <string name="title_fragment_fourth">论坛</string>
    <string name="title_fragment_fifth">个人中心</string>

    <string name="first_header_qiang">限时抢购</string>
    <string name="first_header_pai">竞拍</string>
    <string name="first_header_jian">专家鉴定</string>
    <string name="first_header_duo">一元夺宝</string>
    <string name="first_header_school">格物学堂</string>
    <string name="first_header_jiao">商城</string>

    <string name="first_header_start">距离开始</string>
    <string name="first_header_end">距离结束</string>
    <string name="first_header_over">已结束</string>
    <string name="first_header_more">还有更多</string>

    <string name="fourth_title_fragment_one">说说</string>
    <string name="fourth_title_fragment_two">藏家</string>
    <string name="fourth_title_fragment_three">活动</string>
    <string name="fourth_title_fragment_four">学堂</string>

    <string name="fifth_chong">充值</string>
    <string name="fifth_gou">购物车</string>
    <string name="fifth_shou">我的收藏</string>
    <string name="fifth_jian">我的鉴定</string>
    <string name="fifth_jiao">我的交易</string>
    <string name="fifth_dd">我的订单</string>
    <string name="fh">发货</string>
    <string name="fifth_jing">我的竞拍</string>
    <string name="fifth_lun">我的论坛</string>
    <string name="fifth_xiao">消息中心</string>
    <string name="fifth_setting">设置</string>
    <string name="fifth_th">退换货</string>

    <string name="title_login">登录</string>
    <string name="login_username">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_forget">忘记密码?</string>

    <string name="title_register">注册</string>
    <string name="title_forget">忘记密码</string>
    <string name="register_protocol_hint">我已阅读并同意</string>
    <string name="register_protocol">用户协议</string>
    <string name="register_code">获取验证码</string>
    <string name="register_username">请输入手机号</string>
    <string name="register_password">请输入密码</string>
    <string name="register_password_confirm">请确认密码</string>
    <string name="register_code_hint">请输入验证码</string>

    <string name="product_list_title_one">综合</string>
    <string name="product_list_title_two">销量</string>
    <string name="product_list_title_three">价格</string>
    <string name="product_list_title_four">筛选</string>

    <string name="title_product_detail">商品详情</string>
    <string name="product_detail_material">材质:&#160;%1$s&#160;&#160;规格:&#160;%2$s</string>
    <string name="product_detail_comment">评价&#160;&#160;(%1$s)</string>
    <string name="product_detail_buy">立即购买</string>
    <string name="product_detail_add_car">加入购物车</string>

    <string name="title_pai_detail">竞拍详情</string>
    <string name="pai_name">名称:&#160;%1$s</string>
    <string name="pai_detail_material">材质:&#160;%1$s\n规格:&#160;%2$s</string>
    <string name="pai_price">拍卖价</string>
    <string name="pai_market_price">市场价</string>
    <string name="pai_deposit">保证金</string>
    <string name="pai_last_username">最后出价:&#160;%1$s</string>
    <string name="pai_last_price">最新价格:&#160;%1$s</string>
    <string name="pai_dao_jis_shi">最后剩余时间:&#160;%1$s&#160;时&#160;%2$s&#160;分&#160;%3$s&#160;秒</string>
    <string name="pai_dao_jis_shi_start">距离开始时间:&#160;%1$s&#160;时&#160;%2$s&#160;分&#160;%3$s&#160;秒</string>
    <string name="pai_comment">评论</string>
    <string name="pai_current_price">现价:&#160;%1$s</string>
    <string name="pai_dao_pai_tips">每%1$s分钟降价一次</string>
    <string name="pai_tips">您的余额保证金不足，请充值！</string>

    <string name="jian_title_fragment_one">真</string>
    <string name="jian_title_fragment_two">假</string>
    <string name="jian_title_fragment_three">存疑</string>
    <string name="jian_title_fragment_four">进行中</string>

    <string name="title_jian_detail">鉴定详情</string>
    <string name="jian_detail_result">鉴定结果</string>
    <string name="jian_detail_jian">鉴定</string>
    <string name="jian_detail_professor_comment">专家点评</string>
    <string name="jian_detail_comment">评论</string>

    <string name="title_cang_detail">藏品详情</string>

    <string name="title_ta_one">他的藏品</string>
    <string name="title_ta_two">他的学堂</string>
    <string name="title_ta_three">他的故事</string>
    <string name="title_ta_new">他的评论</string>
    <string name="title_ta_four">他的喜欢</string>

    <string name="title_ta_like">他的喜欢-%1$s</string>
    <string name="title_my_like">我的喜欢-%1$s</string>
    <string name="like_type">类型</string>

    <string name="title_shopping_cart">购物车</string>
    <string name="shopping_cart_clearing">去结算</string>
    <string name="shopping_cart_total">合计:&#160;</string>
    <string name="shopping_cart_total_number">共%1$s件</string>

    <string name="title_create_order">填写订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="create_order_add_info">请添加收货人信息</string>
    <string name="create_order_pay_way">支付方式</string>
    <string name="create_order_pay_way_hint">请选择支付方式</string>

    <string name="title_select_pay_way">选择支付方式</string>
    <string name="pay_way_1">钱包支付</string>
    <string name="pay_way_2">银联支付</string>
    <string name="pay_way_3">微信支付</string>
    <string name="pay_way_4">支付宝支付</string>
    <string name="hint_pay_money">请输入充值金额</string>


    <string name="title_user">个人信息</string>
    <string name="user_head">头像</string>
    <string name="user_nick">昵称</string>
    <string name="user_nick_hint">请输入昵称</string>
    <string name="user_area">所在地</string>
    <string name="user_area_hint">请输入所在地</string>
    <string name="user_address">收货地址</string>
    <string name="user_save">保存修改</string>
    <string name="user_update_password">修改密码</string>
    <string name="user_update_tel">更换绑定手机</string>

    <string name="title_update_tel">修改手机号</string>
    <string name="update_tel_tips">你当前的手机号为: %1$s\n请获取验证码进行验证</string>
    <string name="update_tel_next">下一步</string>
    <string name="update_tel_input_tel_tips">请输入新手机号</string>

    <string name="title_address">选择收货地址</string>
    <string name="address_add">添加地址</string>

    <string name="title_address_edit">编辑收货地址</string>
    <string name="address_edit_name_hint">请输入收货人姓名</string>
    <string name="address_edit_tel_hint">请输入收货人电话</string>
    <string name="address_edit_province_hint">请选择省、市、区</string>
    <string name="address_edit_address_hint">请输入详细地址</string>

    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_tips">您确定要退出吗？</string>

    <string name="title_publish">商品发布</string>
    <string name="title_cang_publish">藏品发布</string>
    <string name="title_jian_publish">我要鉴定</string>
    <string name="title_jian_result_publish">鉴定</string>
    <string name="title_post_publish">发帖</string>
    <string name="publish_cover_image">封面图片</string>
    <string name="publish_content_image">内容详情图</string>
    <string name="publish_title">标题</string>
    <string name="publish_title_hint">请输入标题</string>
    <string name="publish_content_hint">请输入简介</string>
    <string name="publish_type">类型&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="publish_child_type">商品种类</string>
    <string name="publish_start_time">开始时间</string>
    <string name="publish_duration_time">限时长度</string>
    <string name="publish_bao_you">是否包邮</string>
    <string name="publish_zi_tan_level">级别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="publish_duration_time_day">活动天数</string>

    <string name="publish_buy_count">库存数量</string>
    <string name="publish_buy_count_hint">请输入库存数量</string>
    <string name="publish_market_price">市场价&#160;&#160;&#160;&#160;</string>
    <string name="publish_market_price_hint">请输入市场价</string>
    <string name="publish_deposit">保证金&#160;&#160;&#160;&#160;</string>
    <string name="publish_deposit_hint">请输入保证金</string>
    <string name="publish_size">规格&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="publish_size_hint">请输入规格</string>
    <string name="publish_material">材质&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="publish_material_hint">请输入材质</string>
    <string name="publish_price">价格&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="publish_price_hint">请输入价格</string>
    <string name="publish_comment_hint">请输入评论</string>

    <string name="qiang_list_start">%1$s开抢</string>

    <string name="title_comment_list">评论</string>

    <string name="title_image">图片详情</string>


    <string name="order_list_no_pay">未支付</string>
    <string name="order_list_pay">已支付</string>
    <string name="order_list_finish">已发货</string>
    <string name="order_list_order_id">订单号: %1$s</string>
    <string name="order_list_order_name">商品名称:</string>
    <string name="order_list_order_money">金额:</string>
    <string name="order_delete_tips">你确认要删除未支付的订单吗?</string>



</resources>
