<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--封面-->
            <LinearLayout
                style="@style/PublishLinear"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publish_cover_image"
                    android:textColor="@color/text_color_black_muchong"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/imageViewCover"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/divider_retangle_shape"
                    android:src="@mipmap/icon_publish_add_image"/>
            </LinearLayout>

            <View
                style="@style/DividerHorizontal.Thin"/>
            <!--内容图片-->
            <LinearLayout
                style="@style/PublishLinear"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publish_content_image"
                    android:textColor="@color/text_color_black_muchong"
                    android:textSize="14sp"/>

                <com.htlc.muchong.widget.NoScrollGridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:cacheColorHint="@android:color/transparent"
                    android:columnWidth="@dimen/publish_grid_view_size"
                    android:fadingEdge="none"
                    android:gravity="center"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:verticalSpacing="10dp"
                    />
            </LinearLayout>
            <!--标题-->
            <LinearLayout
                style="@style/PublishLinear"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/publish_title"
                    android:textColor="@color/text_color_black_muchong"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="@string/publish_title_hint"
                    android:singleLine="true"
                    android:textColor="@color/text_color_black_muchong"
                    android:textSize="14sp"/>
            </LinearLayout>
            <!--描述-->
            <EditText
                android:id="@+id/editContent"
                android:layout_marginTop="10dp"
                style="@style/PublishLinear"
                android:gravity="start"
                android:hint="@string/publish_content_hint"
                android:textColor="@color/text_color_black_muchong"
                android:minLines="5"
                android:textSize="14sp"/>
            <Button
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:id="@+id/buttonCommit"
                android:text="@string/commit"
                style="@style/Button"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
