<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider_width_thin"
                android:background="@android:color/white"
                android:hint="@string/address_edit_name_hint"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/text_color_black_muchong"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider_width_thin"
                android:background="@android:color/white"
                android:hint="@string/address_edit_tel_hint"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/text_color_black_muchong"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider_width_thin"
                android:background="@android:color/white"
                android:hint="@string/address_edit_province_hint"
                android:padding="12dp"
                android:textColor="@color/text_color_black_muchong"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider_width_thin"
                android:background="@android:color/white"
                android:hint="@string/address_edit_address_hint"
                android:padding="12dp"
                android:textColor="@color/text_color_black_muchong"
                android:textSize="14sp" />
            <Switch
                android:id="@+id/switchView"
                android:layout_gravity="end|right"
                android:text="设为默认地址"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
